--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ Thumbs.db
 *.slxc.autosave
 *.mex*
 
+# Carpetas de codegen
+codegen/
+slprj/
+
 # ==========================
 # Python
 # ==========================
